--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -19,3 +19,10 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build:prod
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: gh-pages
+          build_dir: dist/modelwebsite
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
