--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,7 +2,7 @@
 name: CI / CD for Angular
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   build-and-deploy:
@@ -10,15 +10,34 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Set up node.js
         uses: actions/setup-node@v3.3.0
         with:
           node-version: '17'
           cache: 'npm'
+
       - name: Install dependencies
         run: npm ci
+
+      # - name: Lint
+      #   run: npm run lint
+
+      # - name: Tests
+      #   run: npm run test:prod
+
+      # - name: Replace secret
+      #   uses: cschleiden/replace-tokens@v1
+      #   with:
+      #     tokenPrefix: '{'
+      #     tokenSuffix: '}'
+      #     files: 'src/environments/environment.prod.ts'
+      #   env:
+      #     SECRET_API_KEY: ${{ secrets.API_KEY}}
+
       - name: Build
         run: npm run build:prod
+
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
@@ -26,3 +45,8 @@ jobs:
           build_dir: dist/modelwebsite
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
+
+view rawmain.yml hosted with ❤ by GitHub
