--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build:prod": "ng build --deploy-url /modelwebsite/",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +20,8 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@ngrx/effects": "^15.0.0",
-	  "@ngrx/store": "^15.0.0",
-	  "@ngrx/store-devtools": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -34,9 +34,11 @@
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-junit-reporter": "^2.0.1",
     "typescript": "~4.8.2"
   }
 }
